fixed alignment of inout/output display

--- a/static/css/transliterator_stylesheet.css
+++ b/static/css/transliterator_stylesheet.css
@@ -62,7 +62,7 @@ font-size: 20px;
     }
 
 .results {
-    text-align: right;
+    text-align: auto;
 }
 
 
@@ -100,7 +100,6 @@ footer {
     margin-bottom: 50px;
     margin-left: 50px;
     margin-right: 50px;
-    text-align: center;
 }
 
 .main_content {
@@ -109,13 +108,12 @@ footer {
     height: calc(90% - 100px);
 }
 
-
 .center {
     text-align: center;
 }
-
-.left {
-    text-align: left;
+.display {
+    text-align: auto;
+    padding: 50px;
 }
 
 .form-check-label {
